Archive2/d7/0f67a6ae6cdef8/output
main.cpp:13:5: error: static_assert failed ".."
    static_assert(std::is_same<decltype(f(y)), int&>{}, "..");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
